# Rosmine_Project

devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/mine_picture/: picture.h  pictureRequest.h  pictureResponse.h
devel/lib/mine_picture/: picture_read_node  picture_save_node
devel/lib/pkgconfig/: mine_picture.pc
devel/lib/python2.7/dist-packages/mine_picture/srv/: __init__.py  _picture.py
devel/share/common-lisp/ros/mine_picture/srv/: _package.lisp  picture.lisp  (+2 more)
devel/share/mine_picture/cmake/: mine_picture-msg-extras.cmake  mine_picture-msg-paths.cmake  mine_pictureConfig.cmake
devel/share/roseus/ros/mine_picture/: manifest.l
src/action_demo/: package.xml
src/action_demo/src/: dishes_Server.cpp
src/calaction_demo/: CMakeLists.txt  package.xml
src/calaction_demo/action/: calculation.action
src/calaction_demo/launch/: act.launch
src/calaction_demo/src/: cal_client.cpp  cal_server.cpp
src/demo_saveiamge/: CMakeLists.txt  package.xml
src/demo_saveiamge/src/: saveimage.cpp
src/mbot_description/: package.xml
src/mbot_description/config/: mbot_urdf.rviz
src/mbot_description/launch/: display_mbot_base_urdf.launch  display_mbot_camera_urdf.launch  display_mbot_kinect_urdf.launch  display_mbot_laser_urdf.launch  mbot_base_gazebo.launch
src/mbot_description/urdf/: mbot_base.urdf  mbot_with_camera.urdf  mbot_with_kinect.urdf  mbot_with_laser.urdf  ok_mbot_base.urdf
src/mbot_description/urdf/xacro/: mbot_base_gazebo.xacro  mbot_gazebo.xacro
src/mbot_gazebo/: CMakeLists.txt  package.xml
src/mbot_gazebo/launch/: gazebo_empty.launch  view_mbot_with_camera_gazebo.launch
src/mine_picture/: CMakeLists.txt
src/mine_picture/config/: picture_demo.rviz
src/mine_picture/include/: my_picture_read.h
src/mine_picture/launch/: picture_launch.launch
src/mine_picture/src/: main.cpp  my_picture_read.cpp  my_picture_write.cpp
src/mine_picture/srv/: picture.srv
src/mpic_demo/: CMakeLists.txt  package.xml
src/mpic_demo/config/: pic_demo.rviz
src/mpic_demo/include/: mbot_picture.h  mpic_write.launch.xml
src/mpic_demo/launch/: mpic_demo.launch
src/mpic_demo/src/: main.cpp  mbot_picture.cpp  pic_read.cpp  pic_write.cpp
src/mpic_read/: CMakeLists.txt  package.xml
src/mpic_read/config/: pic_read.rviz
src/mpic_read/launch/: mpic_demo.launch
src/mpic_read/src/: pic_read.cpp  pic_write.cpp
src/param_demo/: CMakeLists.txt  package.xml
src/param_demo/src/: param.cpp
src/s_c_demo/: CMakeLists.txt  package.xml
src/s_c_demo/action/: test.action
src/s_c_demo/src/: action_client.cpp  action_server.cpp
src/topic_demo/: CMakeLists.txt  package.xml
src/topic_demo/launch/: xpbegin.launch
(+3 files in other folders)
